@@ -232,5 +232,6 @@
         <string id="33330">No connection fromm a client was made !</string>
         <string id="33331">IPHONE-directory not found or writeable !</string> 
         <string id="33332">PSP-directory not found or writeable !</string>
-               
+
+        <string id="34000">Line-1 12345678911234567892123456789312345678Line-2 12345678911234567892123456789312345678</string>                
  </strings>
